--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,9 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.BasaliProject" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
+        <item name="colorPrimary">@color/NeutralDarkDark</item>
+        <item name="colorPrimaryDark">@color/NeutralDarkDark</item>
+        <item name="colorAccent">@color/NeutralDarkDark</item>
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 </resources>
