--- a/app/src/main/res/layout/fragment_tab_scan.xml
+++ b/app/src/main/res/layout/fragment_tab_scan.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="18dp"
         android:layout_marginTop="50dp"
         android:orientation="horizontal"
         android:padding="10dp">
@@ -27,7 +27,7 @@
         <RelativeLayout
             android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="280dp"
+            android:layout_height="340dp"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
@@ -37,8 +37,20 @@
                 android:id="@+id/placeholder"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="25dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="45dp"
+                android:layout_marginEnd="25dp"
+                android:layout_marginBottom="45dp"
                 android:src="@drawable/cam_placeholder_logo" />
+
+            <TextView
+                android:id="@+id/tvClearImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Click Here to Clear Image"
+                android:gravity="center_horizontal"
+                android:padding="9dp"
+                android:textStyle="bold"/>
         </RelativeLayout>
 
     </LinearLayout>
@@ -82,9 +94,10 @@
             android:layout_marginStart="26dp"
             android:layout_marginTop="26dp"
             android:layout_marginEnd="24dp"
+            android:textColor="@color/HighlightDark"
             android:text="@string/capture"
             android:textSize="18sp"
-            android:background="@drawable/rounded_button_tertiary"/>
+            android:background="@drawable/dialog_bg_bordered"/>
 
         <Button
             android:id="@+id/process_button"
@@ -94,7 +107,7 @@
             android:layout_marginStart="26dp"
             android:layout_marginTop="26dp"
             android:layout_marginEnd="26dp"
-            android:background="@drawable/rounded_button_primary"
+            android:background="@drawable/dialog_bg_filled"
             android:text="@string/process"
             android:textSize="18sp"/>
     </LinearLayout>
