--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,11 @@
         android:id="@+id/navigation_scan"
         android:name="com.capstone.basaliproject.ui.scan.ScanFragment"
         android:label="@string/title_scanaksara"
-        tools:layout="@layout/fragment_scan" />
+        tools:layout="@layout/fragment_scan" >
+        <action
+            android:id="@+id/action_navigation_scan_to_tabScanFragment"
+            app:destination="@id/tabScanFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_learn"
@@ -28,5 +32,19 @@
         android:name="com.capstone.basaliproject.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/tabScanFragment"
+        android:name="com.capstone.basaliproject.ui.scan.scanner.TabScanFragment"
+        android:label="fragment_tab_scan"
+        tools:layout="@layout/fragment_tab_scan" >
+        <action
+            android:id="@+id/action_tabScanFragment_to_scanResultFragment"
+            app:destination="@id/scanResultFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/scanResultFragment"
+        android:name="com.capstone.basaliproject.ui.scan.scanner.ScanResultFragment"
+        android:label="fragment_scan_result"
+        tools:layout="@layout/fragment_scan_result" />
 
 </navigation>
