--- a/app/src/main/res/drawable/rounded_corner_little.xml
+++ b/app/src/main/res/drawable/rounded_corner_little.xml
@@ -2,7 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="6dp" />
+            <corners android:bottomLeftRadius="16dp"/>
+            <corners android:topLeftRadius="16dp"/>
         </shape>
     </item>
 </selector>
