add home recycler view data

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -125,7 +125,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_aksara"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:overScrollMode="never"
         android:scrollbarSize="0dp"
