--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -24,7 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/aksara" />
+            android:text="@string/aksara"
+            android:textStyle="bold" />
 
     </androidx.appcompat.widget.Toolbar>
 
