--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -46,7 +46,7 @@
                     android:layout_width="82dp"
                     android:layout_height="82dp"
                     android:contentDescription="@string/profile_image"
-                    android:src="@tools:sample/avatars"
+                    tools:src="@tools:sample/avatars"
                     android:layout_gravity="center_horizontal"/>
 
                 <ImageButton
@@ -67,6 +67,103 @@
                     android:src="@drawable/ic_baseline_edit_24"/>
 
             </FrameLayout>
+
+            <LinearLayout
+                android:id="@+id/item_notifications"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="24dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/notifications"
+                    android:textSize="14sp"
+                    android:padding="16dp"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:id="@+id/arrow_notifications"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:src="@drawable/baseline_keyboard_arrow_right_24"
+                    android:contentDescription="@string/notification_setting" />
+
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:background="@color/NeutralLightDark" />
+
+            <LinearLayout
+                android:id="@+id/item_language"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/language"
+                    android:textSize="14sp"
+                    android:padding="16dp"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:id="@+id/arrow_language"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:src="@drawable/baseline_keyboard_arrow_right_24"
+                    android:contentDescription="@string/notification_setting" />
+
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:background="@color/NeutralLightDark" />
+
+            <LinearLayout
+                android:id="@+id/btnLogout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/logout"
+                    android:textSize="14sp"
+                    android:padding="16dp"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:id="@+id/arrow_logout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:src="@drawable/baseline_keyboard_arrow_right_24"
+                    android:contentDescription="@string/logout" />
+
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:background="@color/NeutralLightDark" />
 
         </LinearLayout>
 
