--- a/app/src/main/res/layout/custom_layout_dialog_1_option.xml
+++ b/app/src/main/res/layout/custom_layout_dialog_1_option.xml
@@ -23,9 +23,10 @@
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:layout_marginTop="16dp"
-            android:text="Alert"
+            android:text="@string/alert"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -34,9 +35,10 @@
             android:id="@+id/tv_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:paddingTop="10dp"
-            android:text="Thanks For Watching!"
+            android:text="@string/thanks_for_watching"
             android:textColor="@color/black"
             android:textSize="16sp" />
 
@@ -47,7 +49,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:background="@drawable/dialog_bg"
-            android:text="OK"
+            android:text="@string/ok"
             app:backgroundTint="@color/HighlightDark" />
 
     </LinearLayout>
