--- a/app/src/main/res/layout/custom_layout_dialog_2_option.xml
+++ b/app/src/main/res/layout/custom_layout_dialog_2_option.xml
@@ -23,8 +23,9 @@
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="Alert"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="@string/alert"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -33,9 +34,10 @@
             android:id="@+id/tv_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:paddingTop="10dp"
-            android:text="Thanks For Watching!"
+            android:text="@string/thanks_for_watching"
             android:textColor="@color/black"
             android:textSize="16sp" />
 
@@ -51,24 +53,24 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:layout_marginRight="2dp"
+                android:layout_marginEnd="2dp"
                 android:background="@drawable/dialog_bg_bordered"
                 android:layout_marginBottom="15dp"
-                android:text="NO"
+                android:text="@string/no"
                 android:textColor="@color/NeutralDarkLight" />
 
             <Button
                 android:id="@+id/yes_btn_id"
                 android:layout_width="130dp"
-                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="15dp"
-
                 android:background="@drawable/dialog_bg_filled"
-                android:text="YES"
+                android:text="@string/yes"
                 app:backgroundTint="@color/HighlightDark" />
+
         </LinearLayout>
 
 
