--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -134,7 +134,7 @@
                 android:background="@color/NeutralLightDark" />
 
             <LinearLayout
-                android:id="@+id/btnLogout"
+                android:id="@+id/item_logout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
