--- a/app/src/main/res/layout/custom_layout_dialog_scan_option.xml
+++ b/app/src/main/res/layout/custom_layout_dialog_scan_option.xml
@@ -16,6 +16,7 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:paddingBottom="20dp"
@@ -33,27 +34,45 @@
         android:id="@+id/ib_camera"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:scaleType="fitCenter"
-        android:layout_marginStart="10dp"
         android:layout_marginEnd="40dp"
-        android:src="@drawable/ic_baseline_camera_alt_24"
         android:background="@android:color/transparent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_baseline_camera_alt_24"
+        app:layout_constraintEnd_toStartOf="@id/ib_gallery"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/ib_gallery"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
     <ImageButton
         android:id="@+id/ib_gallery"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:scaleType="fitCenter"
         android:layout_marginStart="40dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/ic_baseline_photo_24"
         android:background="@android:color/transparent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_baseline_photo_24"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ib_camera"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+    <ImageButton
+        android:id="@+id/ib_draw"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/draw_icon"
+        app:layout_constraintEnd_toStartOf="@+id/ib_gallery"
+        app:layout_constraintStart_toEndOf="@+id/ib_camera"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+
+    <TextView
+        android:id="@+id/tv_draw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/draw"
+        app:layout_constraintEnd_toEndOf="@+id/ib_draw"
+        app:layout_constraintStart_toStartOf="@+id/ib_draw"
+        app:layout_constraintTop_toBottomOf="@+id/ib_draw" />
 
     <TextView
         android:id="@+id/tv_camera"
