--- a/app/src/main/res/layout/activity_confirmation.xml
+++ b/app/src/main/res/layout/activity_confirmation.xml
@@ -7,6 +7,14 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/confirmation_title"
         android:layout_width="match_parent"
@@ -19,6 +27,8 @@
         android:textSize="18sp"
         android:textStyle="bold"
         tools:alpha="100" />
+
+
 
     <TextView
         android:id="@+id/confirmation_message"
