--- a/app/src/main/res/layout/learn_item.xml
+++ b/app/src/main/res/layout/learn_item.xml
@@ -70,8 +70,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/dialog_bg_bordered"
-                android:text="View"
+                android:background="@drawable/rounded_button_tertiary"
+                android:text="@string/view"
                 android:textColor="@color/HighlightDark"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
