--- a/app/src/main/res/drawable/dialog_bg_bordered.xml
+++ b/app/src/main/res/drawable/dialog_bg_bordered.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <!-- background -->
-            <solid android:color="@android:color/transparent" />
+            <solid android:color="@color/white" />
             <!-- border -->
             <stroke android:width="1dp" android:color="@color/HighlightDark" />
 
