--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -18,7 +18,7 @@
         <ImageButton
             android:id="@+id/toolbar_back"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:background="@color/white"
+            android:background="#00FFFFFF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_arrow_back_24"
