--- a/app/src/main/res/layout/custom_draw_dialog.xml
+++ b/app/src/main/res/layout/custom_draw_dialog.xml
@@ -31,7 +31,7 @@
             android:id="@+id/tvReset"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Reset"
+            android:text="@string/reset"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:padding="10dp"
@@ -46,7 +46,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="22dp"
             android:layout_marginTop="60dp"
-            android:text="Save"
+            android:text="@string/save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
