--- a/app/src/main/res/layout/custom_layout_dialog_scan_option.xml
+++ b/app/src/main/res/layout/custom_layout_dialog_scan_option.xml
@@ -70,6 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/draw"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/ib_draw"
         app:layout_constraintStart_toStartOf="@+id/ib_draw"
         app:layout_constraintTop_toBottomOf="@+id/ib_draw" />
@@ -79,6 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/camera"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/ib_camera"
         app:layout_constraintStart_toStartOf="@id/ib_camera"
         app:layout_constraintEnd_toEndOf="@id/ib_camera"/>
@@ -88,6 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/gallery"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/ib_gallery"
         app:layout_constraintStart_toStartOf="@id/ib_gallery"
         app:layout_constraintEnd_toEndOf="@id/ib_gallery"/>
