--- a/app/src/main/res/layout/fragment_learn_detail.xml
+++ b/app/src/main/res/layout/fragment_learn_detail.xml
@@ -15,7 +15,7 @@
         <ImageButton
             android:id="@+id/toolbar_back"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:background="@color/white"
+            android:background="#00FFFFFF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_arrow_back_24"
@@ -91,7 +91,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="8dp"
-                android:text="Done"
+                android:text="@string/done"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
