--- a/app/src/main/res/layout/item_aksara_home.xml
+++ b/app/src/main/res/layout/item_aksara_home.xml
@@ -19,8 +19,8 @@
             android:layout_width="200dp"
             android:layout_height="120dp"
             android:contentDescription="@string/aksara_d"
-            android:scaleType="centerCrop"
-            tools:src="@tools:sample/avatars"
+            android:scaleType="fitCenter"
+            tools:src="@drawable/aksara_suara"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +85,7 @@
             android:textColor="@color/HighlightDark"
             android:text="@string/view"
             android:textSize="18sp"
-            android:background="@drawable/dialog_bg_bordered"
+            android:background="@drawable/rounded_button_tertiary"
             app:layout_constraintTop_toBottomOf="@id/tv_item_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
