--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -156,6 +156,39 @@
                 android:background="@color/NeutralLightDark" />
 
             <LinearLayout
+                android:id="@+id/item_mode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/theme"
+                    android:textSize="16sp"
+                    android:padding="16dp"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:id="@+id/arrow_mode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:src="@drawable/baseline_keyboard_arrow_right_24"
+                    android:contentDescription="@string/notification_setting" />
+
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:background="@color/NeutralLightDark" />
+
+
+            <LinearLayout
                 android:id="@+id/item_logout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
