--- a/app/src/main/res/layout/fragment_tab_history.xml
+++ b/app/src/main/res/layout/fragment_tab_history.xml
@@ -8,6 +8,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHistoryParent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        tools:listitem="@layout/history_each_item" />
+
+    <FrameLayout
+        android:id="@+id/container_nested_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
 </FrameLayout>
