--- a/app/src/main/res/layout/history_each_item.xml
+++ b/app/src/main/res/layout/history_each_item.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,24 +8,32 @@
     android:orientation="vertical"
     android:id="@+id/linear_layout">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textViewMonth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="2.5"
             android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:padding="10dp"
             android:textColor="#8C755E"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="Month" />
+
+        <TextView
+            android:id="@+id/textViewYear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="#8C755E"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:text="2023" />
 
         <ImageView
             android:id="@+id/arro_imageview"
@@ -34,22 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginEnd="24dp"
-            android:padding="10dp"
-            android:src="@drawable/baseline_keyboard_arrow_down"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@drawable/baseline_keyboard_arrow_down" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/expandable_layout">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/child_rv"
-            android:layout_width="match_parent"
-            tools:listitem="@layout/learn_item"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
 </LinearLayout>
