--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,18 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.login.LoginActivity">
 
-    <ImageView
-        android:id="@+id/iv_cloud"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:contentDescription="@string/login_image"
-        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.202"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal2"
-        app:layout_constraintVertical_bias="0.208"
-        app:srcCompat="@drawable/w_cloud" />
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -32,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/w_hedgehog_sunflo" />
+        app:srcCompat="@drawable/kipas" />
 
     <TextView
         android:id="@+id/titleTextView"
