--- a/app/src/main/res/layout/fragment_learn.xml
+++ b/app/src/main/res/layout/fragment_learn.xml
@@ -18,14 +18,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:titleTextColor="@color/black">
 
-        <TextView
-            android:id="@+id/toolbar_title"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="20dp"
             android:layout_gravity="center"
-            android:text="@string/aksara"
-            android:textStyle="bold" />
+            android:src="@drawable/logo"/>
 
     </androidx.appcompat.widget.Toolbar>
 
